<resources>
    <string name="app_name">TreeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
        <item>Leaf</item>
    </string-array>
    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="what_is_dendrology">Dendrology actually means "the study of trees." In common usage it has come to mean
the taxonomy of woody plants (Harlow and others 1979), which is the systematic
classification, naming, and identification of trees based on natural attributes and
relationships. The study of dendrology also includes knowledge about characteristics of
trees and their geographical range.</string>
    <string name="dendrology_in_urban_foresty">Learning how to identify trees takes time and experience, but once familiar with how to
do it, it is a valuable skill for urban foresters. Some activities in which knowing about
dendrology will be most useful are noted in table</string>
    <string name="classification_of_trees">Since ancient times, humans have attempted to classify plants. Today, there is no single
method of classifying plants because of the complexity of relationships among plants.
The U.S. and other countries prefer a system developed by German taxonomists Adolf
Engler and Karl Pramtl. This plant classification system provides a systematic way to
identify trees based on genetic relationships. It also facilitates the communication
between people when they are discussing specific plants. Two principles of this system
are important in understanding how plants are categorized:
<br />· The reproductive organs (flowers and fruit) are the basis of the classification
system. Other important characteristics are leaves and wood anatomy. Trees can
be classified as closely related when they have similar fruits even though they
have different leaves and buds..
<br />· The characteristics of a tree in its natural habitat influence its classification.</string>
    <string name="classification_definitions">Using the classification system requires knowing the terminology and definitions used in
dendrology. The classifications in table 2 divide trees into increasingly smaller groups;
each one is given a Latin name. This method of naming natural things is common in
science. Knowing the family name helps to understand relationships among trees. The
genus and species names are the most important ones to know because a tree’s scientific
name is made up of these two names, such as Magnolia grandiflora (southern magnolia).
Table 3 shows an example of the classification structure for the loblolly pine, a
gymnosperm, and the Southern red oak, an angiosperm. The definitions in table 4 are
often used to describe trees found in urban areas. </string>
    <string name="order_description">Trees are further classified into orders according to certain other characteristics of seed reproduction. Angiosperms are divided into two major groups, monocotyledons and dicotyledons, based in part on the number of primary leaves (one or two) present in the seed plant. The Sabal palmetto is an example of a monocotyledon. Most trees are dicotyledons, such as members of the walnut or oak families.</string>
    <string name="class_definition">Trees are then divided into two classes, Gymnosperms and Angiosperms, by the method they use to develop the seeds used for reproduction. Gymnosperms, such as conifers, produce an open seed on a structure such as a cone. Angiosperms are flowering trees that have seeds enclosed in an ovary.</string>
    <string name="division_definition">This is the first category of the plant kingdom and is based on the plant’s means of reproduction. Trees, in the Spermatophyte division, reproduce through seeds.</string>
    <string name="kingdom_definition">All living things are classified into kingdoms (e.g. plants and animals). Trees are in the plant kingdom</string>
    <string name="family_description">A group of closely related trees, usually including one or more genera (plural of genus) make up a family. The rose family, Rosaceae, is a family in the dicot group, and includes cherry, apple, and pear trees.</string>
    <string name="genus_description">A collection of closely related species is a genus. The species usually are structurally similar or have common ancestry. Examples are the cherry and plum trees that are a genus, Prunus, of the rose family</string>
    <string name="species_definition">A collection of individuals with characteristics so similar that they suggest common parentage, a species is a tree distinct and unlike others. The black cherry, Prunus serotina, is a species of the genus Prunus. Species is the basic, and probably most important (Dirr 1990) unit of taxonomy or classification of a tree.</string>
    <string name="hybrid_definition">A tree produced by crossing two different species is considered a hybrid. Hybridization has been used to create new variations of a species for urban areas. An example is the Cornus.kousa x florida.celestial, a hybrid of the Kousa dogwood and the flowering dogwood that was developed for greater resistance to disease</string>
    <string name="veriety_definition">Within a species, a tree that has distinctive but minor differences from other trees of the same species is a variety. These differences are inheritable and can be reproduced from seed (Dirr 1990). A variety that is significantly different from the standard species is often the beginning of a new species. Variations in the color of the leaves or flowers or a difference in the fruit will distinguish one variety of a tree from others in the species.</string>
    <string name="cultivar_definition">Trees that have been cultivated to produce specific, distinguishing characteristics are cultivars. These specimens retain the features created in the development of the cultivar, but they usually can only be reproduced by grafting to maintain the characteristics. This method of reproduction distinguishes it from a variety, although the term cultivar and variety are often used interchangeably (Dirr 1990).</string>
    <string name="clone_definition">A population of trees that develops asexually from a single tree is a clone. Sassafras and sweetgum are trees that reproduce as clones.</string>
    <string name="natives_definition">Trees that are indigenous to a particular region or environment are considered to be native. This usually suggests that the species originated in the region and has a certain compatibility with it. A native tree, however, may not be compatible in urban locations in that region because of modifications to the habitat, including soil, water, and nutrient cycles.</string>
    <string name="exotics_definition">Trees that are not native to the area in which they grow are considered to be exotics. Exotics may be resistant to local insect and disease problems, but may also bring in unexpected and undesirable insect and diseases. They may also become invasive. Exotics become naturalized when they grow and reproduce in an area.</string>
    <string name="naming_trees">Naming trees with Latin names is the second component of tree taxonomy. Each species has a scientific Latin name that is used universally. However, every tree also has one or more common names by which it is known in various parts of its range.</string>
    <string name="scientific_name">A system of standardized Latin names for plants was developed in the 18th century and is now used throughout the world as a universal system for naming trees. The complete scientific name for a tree consists of three parts: <br />· Genus; for the loblolly pine it is Pinus <br />· Species; for the loblolly pine it is Pinus taeda <br />· The full or abbreviated name of the person or persons who originally described the species; the full name of the loblolly pine is Pinus taeda L (L. is the initial for Linnaeus, the Swedish botanist of the 18th century).</string>
    <string name="urban_influence_description">Tree identification in urban areas can be complicated. There are usually a large number of species in urban areas, including native and exotic trees. And various conditions associated with the urban environment may alter specific characteristics of a tree, such as changing the appearance of the leaves or bark that help in tree identification. Examples of site factors that may alter a tree’s appearance include compacted soils, excessive soil moisture, and extreme temperatures.</string>
    <string name="size_form_shape_urban_environment">In an urban environment, trees are often growing in very different conditions than those species growing in a rural or forested area. Trees in urban locations are often smaller and shaped differently than those in forests for several reasons.</string>
    <string name="individual_specimen">In urban locations, a tree is often planted as an individual specimen. This exposes it to more light and wind, and usually higher temperatures. Urban trees also will commonly have larger crowns and thicker and shorter trunks than the same species growing in a forest.</string>
    <string name="range_may_change">It is important to remember that a tree’s range may change as the environment is altered. One factor that may change the range is the loss of trees when an area is urbanized. Fewer trees may change the temperature and the flow patterns of wind and water. Another factor that alters the range of a species is its introduction to new areas. When a plant foreign to a region becomes established and reproduces, it is said to be \"naturalized.\" These two situations may greatly extend the range of a tree or reduce it to the point of extinction. Planting a tree out of its natural range can also influence its form and shape. For example, planting river birches far from the river may change their appearance</string>
    <string name="soil_conditions">Soil conditions, such as limited soil volume, compaction, drainage, poor aeration, and limited nutrients can influence sprouting and twig elongation may be shortened.</string>
    <string name="pruning">Pruning can change the natural shape of a tree.</string>
    <string name="leaves_urban_environment">The soil conditions at the site can also influence leaf size and color. <br />· Leaves may be stunted in size. <br />· Color may be altered.</string>
    <string name="bark_urban_influence">The bark of a tree can also be influenced by the urban environment. · In heavily shaded areas lichen may grow on the bark, changing the color. · If the bark has been damaged by insects, rodents, or other pests identification in the winter may be difficult.</string>
    <string name="flowers_urban_influence">Urban locations may affect the natural cycle of a tree’s growth. · Variations in light and temperature patterns may change the time of year that a tree produces new foliage, flowers, or fruits · Soil fertility also influences the time that a tree flowers and the number of flowers produced.</string>
</resources>